--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
   "permissions": [
     "clipboardRead",
     "clipboardWrite",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "serial"
   ],
   "app": {
     "background": {
