--- a/beagle-term/manifest.json
+++ b/beagle-term/manifest.json
@@ -5,10 +5,12 @@
   "version": "1.0.0",
   "default_locale": "en",
   "icons": {
-    "128": "images/vt128.png",
-    "16": "images/vt16.png"
+    "128": "images/beagleterm-128.png",
+    "48": "images/beagleterm-48.png",
+    "32": "images/beagleterm-32.png",
+    "16": "images/beagleterm-16.png"
   },
-  "description": "Serial terminal emulator.",
+  "description": "Beagle Term is web-based serial terminal emulator.",
   "offline_enabled": true,
   "permissions": [
     "clipboardRead",
