Update hterm library
the library comes from
http://git.chromium.org/chromiumos/platform/assets.git
& commit # is e752806a756f3ec8bc38c2d0ddf81ca07623bfc0

for running on Packaged app.
I disabled localStorage. (localStorage is not supported on Chorme
packaged app)

TEST=install, run , check on serial device, exit

--- a/beagle-term/manifest.json
+++ b/beagle-term/manifest.json
@@ -16,7 +16,8 @@
     "clipboardRead",
     "clipboardWrite",
     "unlimitedStorage",
-    "serial"
+    "serial",
+	"storage"
   ],
   "app": {
     "background": {
