move main window resource to the top direectory

--- a/beagle-term/manifest.json
+++ b/beagle-term/manifest.json
@@ -21,7 +21,7 @@
   ],
   "app": {
     "background": {
-      "scripts": ["js/launcher.js", "js/serial.js"]
+      "scripts": ["background.js", "js/serial.js"]
     }
   }
 }
