--- a/beagle-term/manifest.json
+++ b/beagle-term/manifest.json
@@ -2,7 +2,7 @@
   "minimum_chrome_version": "25",
   "manifest_version": 2,
   "name": "Beagle Term",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "default_locale": "en",
   "icons": {
     "128": "images/beagleterm-128.png",
@@ -21,7 +21,7 @@
   ],
   "app": {
     "background": {
-      "scripts": ["background.js", "js/serial.js"]
+      "scripts": ["background.js"]
     }
   }
 }
