--- a/beagle-term/manifest.json
+++ b/beagle-term/manifest.json
@@ -17,7 +17,8 @@
     "clipboardWrite",
     "unlimitedStorage",
     "serial",
-    "storage"
+    "storage",
+    "fileSystem"
   ],
   "app": {
     "background": {
