--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "minimum_chrome_version": "25",
   "manifest_version": 2,
-  "name": "Beagle Term (Beta)",
+  "name": "Beagle Term",
   "version": "1.7.0",
   "icons": {
     "128": "images/beagleterm-128.png",
