--- a/app/bower.json
+++ b/app/bower.json
@@ -1,11 +1,6 @@
 {
   "name": "beagleterm",
-  "version": "1.7.0",
-  "homepage": "https://github.com/sunglim/NinjaTerm",
-  "authors": [
-    "Sungguk Lim <limasdf@gmail.com>"
-  ],
-  "license": "MIT",
+  "homepage": "https://github.com/beagleterm/beagle-term",
   "dependencies": {
     "bootstrap": "^3.3.7"
   }
