--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "test": "node_modules/grunt/bin/grunt test",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install"
   },
   "repository": {
