--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-jscs": "^3.0.1",
     "grunt-vulcanize": "^1.0.0"
   }
 }
