--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ node_js:
 before_script:
   - npm install grunt-cli -g
   - npm install bower -g
+  - pip install pylint
 
 script: pylint tools/packing.py && cd app && npm install && grunt test
