--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ language: node_js
 node_js:
   - 0.10
 
-python:
-  - "3.4"
-
 before_script:
   - npm install grunt-cli -g
   - npm install bower -g
-  - pip install pylint
+  - pip install pylint && pylint --version
 
-script: pylint tools/packing.py && cd app && npm install && grunt test
+script:
+  - pylint tools/packing.py
+  - cd app && npm install && grunt test
