--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_script:
   - npm install grunt-cli -g
   - npm install bower -g
-  - sudo pip install pylint && pylint --version
+  - sudo pip install pylint && pylint --version 1>&2
 
 script:
   - pylint tools/packing.py
