Remove unnecessary permission, filesystem from manifest.json

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -13,8 +13,7 @@
   "offline_enabled": true,
   "permissions": [
     "serial",
-    "storage",
-    "fileSystem"
+    "storage"
   ],
   "app": {
     "background": {
